# skyops

./: .env  .env.tmp_makemigrations  .gitignore  README.md  crear_grupos.py  main.py  pyproject.toml  pyproject.toml.bak  pytest.ini  seed_data.py
.github/workflows/: deploy.yml
airport/: admin.py  filters.py  pagination.py  permissions.py  urls.py  utils_sesiones.py
airport/migrations/: 0001_initial.py  0002_categoriapasajero_equipaje_notificacion_and_more.py  0002_terminal.py  0003_pistaaterrizaje.py  0004_asignacionpista.py  0005_horariovuelo.py  0006_escalavuelo.py  0007_merge_20260626_1540.py  0008_auditlog_certificaciontripulante_and_more.py  0009_perfilusuario_foto.py  0010_aeropuerto_foto_url.py  0011_bannerpromocional.py  0012_bannerpromocional_titulo_texto.py  0013_vuelo_precio_reserva_precio.py  0014_vuelo_asientos_por_clase.py  0015_reserva_multi_pasajeros.py  0016_bannerpromocional_imagen.py  0017_aeropuerto_foto.py  0018_aerolinea_logo.py  0019_aeronave_foto.py  0020_puerta_terminal_fk.py  0021_contenidoinstitucional.py  0022_contenidoinstitucional_imagen.py
airport/models/: __init__.py  aerolinea.py  aeronave.py  aeropuerto.py  asignacion_pista.py  asignacion_tripulacion.py  audit_log.py  banner_promocional.py  categoria_pasajero.py  certificacion_tripulante.py  contenido_institucional.py  equipaje.py  escala_vuelo.py  horario_vuelo.py  incidente.py  mantenimiento_aeronave.py  notificacion.py  pasajero.py  perfil_usuario.py  perfil_usuario.py.bak  pista_aterrizaje.py  puerta.py  reserva.py  (+6 more)
config/: settings.py  settings.py.bak  urls.py  urls.py.bak
(+77 files in other folders)
