[project]
name = "skyops"
version = "1.0.0"
description = "SkyOps - Sistema de Control de Vuelos"
requires-python = ">=3.12"
dependencies = [
    "django>=5.0",
    "djangorestframework>=3.15",
    "djangorestframework-simplejwt>=5.3",
    "django-cors-headers>=4.3",
    "drf-spectacular>=0.27",
    "django-filter>=24.0",
    "psycopg2-binary>=2.9",
    "django-environ>=0.11",
    "gunicorn>=21.2",
    "google-auth>=2.28",
    "requests>=2.31",
]

[tool.uv]
dev-dependencies = [
    "pytest-django>=4.8",
    "pytest>=8.0",
]